--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -14,5 +14,5 @@ jobs:
       - name: Publish
         env:
           CF_API_TOKEN: ${{ secrets.CF_API_TOKEN }}
-        run: npm i @cloudflare/wrangler && npx wrangler publish
+        run: npm i wrangler && npx wrangler publish
 
